# custom-sub

./: .gitignore  FrameViewer.js  query_db.py  sv_controller.cc  sv_native.h
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
frontend/js/components/: analysis.js  chart.js  config.js  filter.js  frameview.js  navbar.js  phasor.js  stats.js  table.js  timing.js
frontend/js/utils/: backend.js
native/: CMakeLists.txt
native/include/: sv_capture.h  sv_decoder.h  sv_highperf.h  sv_phasor.h  sv_phasor_csv.h
native/src/: sv_capture_impl.cc  sv_decoder_impl.cc  sv_highperf.cc  sv_phasor.cc  sv_phasor_csv.cc  sv_subscriber.cc
native/test/: README.md  SERVICE_SETUP.md  manage_service.sh  sv_capture_test.cc  sv_decoder_test.cc  sv_service_standalone  sv_service_standalone.service
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  ffi.rs  lib.rs  main.rs
