[package]
name = "sv-subscriber"
version = "1.0.0"
description = "IEC 61850-9-2LE Sampled Values Subscriber"
authors = ["SV Team"]
edition = "2021"

[lib]
name = "sv_subscriber_app"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
